adding some tests and refactoring views with partials

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,10 @@
-
+<% provide(:title, @post.title) %>
         <div class="row">
 
             <!-- Blog Post Content Column -->
             <div class="col-lg-7 col-md-offset-1">
 
                 <!-- Blog Post -->
-
                 <!-- Title -->
                 <h2><%= @post.title %></h2>
                 <!-- Date/Time -->
