--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
                 <ul class="nav navbar-nav navbar-right top">
                   <li><%= link_to "HOME", root_path, "data-no-turbolink" => true %></li>
                   <li><%= link_to "PROJECTS", projects_path %></li>
-                  <li><%= link_to "BLOG", blog_path %></li>
+                  <li><%= link_to "BLOG", posts_path %></li>
                 </ul>
               </div> <!-- end div class="collapse navbar-collapse" -->
 
