--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,9 @@
+<% provide(:title, "Blog") %>
 
              <div class="row">
             <!-- Blog Entries Column -->
             <div class="col-md-7 col-md-offset-1">
-            <%= will_paginate %>
-                <% @posts.each do |post| %>
-                <h3><%= link_to post.title, post_path(post) %></h3>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on <%= post.created_at.strftime("%b %d, %Y") %></p>
-                <p class="postbody"><%= post.content %></p>
-                <button type="button" class="btn btn-primary">
-                    <%= link_to "Read More ", post_path(post), class: "button-text-color" %><span class="glyphicon glyphicon-chevron-right"></span>
-                </button>
-
-                <hr>
-                <% end %>
+                <%= render @posts %>
 
                 <%= will_paginate %>
             </div>
