--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, "Home") %>
+
 <div class="row">
   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-push-6">
     <p class="main-greeting">Hello,</p>
@@ -9,7 +11,7 @@
           <div class="circletext"><%= link_to "ABOUT", about_path %></div >
           </div>
           <div class="circle circle2">
-            <div class="circletext"><%= link_to "BLOG", blog_path %></div >
+            <div class="circletext"><%= link_to "BLOG", posts_path %></div >
             </div>
             <div class="circle circle3">
               <div class="circletext"><%= link_to "PROJECTS", projects_path %></div >
