--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -1,74 +1,74 @@
+<% provide(:title, "Projects") %>
 
+<!-- Project One -->
+<div class="row">
+    <div class="col-md-4 col-md-offset-1">
+        <a href="#">
+            <img class="img-responsive project" src="http://placehold.it/700x300" alt="">
+        </a>
+    </div>
+    <div class="col-md-6">
+        <h3>Personal Website</h3>
+        <p>This website was my first attempt at a completed rails application, containing a blog, tags and comments functionality.  I used Bootstrap for a lot of the styling, but particularly for the home page (and to practice my CSS-fu), I tried to move away from the standard 'Bootstrap' look and create something different.</p>
+        <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        <a class="btn btn-primary" href="https://github.com/larafinnegan/site" target="_blank">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+</div>
+<!-- /.row -->
 
-        <!-- Project One -->
-        <div class="row">
-            <div class="col-md-4 col-md-offset-1">
-                <a href="#">
-                    <img class="img-responsive project" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-6">
-                <h3>Personal Website</h3>
-                <p>This website was my first attempt at a completed rails application, containing a blog, tags and comments functionality.  I used Bootstrap for a lot of the styling, but particularly for the home page (and to practice my CSS-fu), I tried to move away from the standard 'Bootstrap' look and create something different.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <a class="btn btn-primary" href="https://github.com/larafinnegan/site" target="_blank">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
+<hr>
 
-        <hr>
+<!-- Project Two -->
+<div class="row">
+    <div class="col-md-4 col-md-offset-1">
+        <a href="#">
+            <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+        </a>
+    </div>
+    <div class="col-md-6">
+        <h3>Project Two</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+        <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        <a class="btn btn-primary" href="#">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+</div>
+<!-- /.row -->
 
-        <!-- Project Two -->
-        <div class="row">
-            <div class="col-md-4 col-md-offset-1">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-6">
-                <h3>Project Two</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <a class="btn btn-primary" href="#">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
+<hr>
 
-        <hr>
+<!-- Project Three -->
+<div class="row">
+    <div class="col-md-4 col-md-offset-1">
+        <a href="#">
+            <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+        </a>
+    </div>
+    <div class="col-md-6">
+        <h3>Project Three</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+        <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        <a class="btn btn-primary" href="#">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+</div>
+<!-- /.row -->
 
-        <!-- Project Three -->
-        <div class="row">
-            <div class="col-md-4 col-md-offset-1">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-6">
-                <h3>Project Three</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <a class="btn btn-primary" href="#">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
+<hr>
 
-        <hr>
+<!-- Project Four -->
+<div class="row">
 
-        <!-- Project Four -->
-        <div class="row">
+    <div class="col-md-4 col-md-offset-1">
+        <a href="#">
+            <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+        </a>
+    </div>
+    <div class="col-md-6">
+        <h3>Project Four</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
+        <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        <a class="btn btn-primary" href="#">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+</div>
+<!-- /.row -->
 
-            <div class="col-md-4 col-md-offset-1">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-6">
-                <h3>Project Four</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <a class="btn btn-primary" href="#">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
+<hr>
