--- a/app/views/posts/_sidebar.html.erb
+++ b/app/views/posts/_sidebar.html.erb
@@ -1,33 +1,19 @@
 <div class="col-md-4">
 
-    <!-- Blog Search Well -->
+<!-- Side Widget Well -->
     <div class="well">
-        <h4>Blog Search</h4>
-        <div class="input-group">
-            <input type="text" class="form-control">
-            <span class="input-group-btn">
-                <button class="btn btn-default" type="button">
-                    <span class="glyphicon glyphicon-search"></span>
-                </button>
-            </span>
-        </div>
-        <!-- /.input-group -->
+        <h4>Why a blog?</h4>
+                    <p>As I'm working on new projects, I'm constantly picking up information and resources, so I'll post the highlights here for easy reference.</p>
     </div>
-
     <!-- Blog Categories Well -->
     <div class="well">
         <h4>Blog Categories</h4>
         <div class="row">
             <div class="col-lg-6">
                 <ul class="list-unstyled">
-                    <li><a href="#">Category Name</a>
-                    </li>
-                    <li><a href="#">Category Name</a>
-                    </li>
-                    <li><a href="#">Category Name</a>
-                    </li>
-                    <li><a href="#">Category Name</a>
-                    </li>
+                    <%= @tags.find_each do |tag| %>
+                        <li><%= link_to tag.name, {controller:"posts", action:"index", tag: tag.id } %></li>
+                    <% end %>
                 </ul>
             </div>
             <div class="col-lg-6">
@@ -46,9 +32,4 @@
         <!-- /.row -->
     </div>
 
-    <!-- Side Widget Well -->
-    <div class="well">
-        <h4>Why a blog?</h4>
-                    <p>As I'm working on new projects, I'm constantly picking up information and resources, so I'll post the highlights here for easy reference.</p>
-    </div>
 </div>
