--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
                 <hr>
 
                 <!-- Post Content -->
-                <p class="lead"><%= @post.content %></p>
+                <p><%= raw(@post.content) %></p>
                 <hr>
 
                 <!-- Blog Comments -->
