--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <h3>
-  <%= link_to post.title, post_path(post) %>
+  <%= link_to post.title, post_path(post), class: "post-title" %>
 </h3>
 <p>
   <span class="glyphicon glyphicon-time"></span> 
