--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,7 +20,7 @@
           </div><!-- end 3 circles -->
 
           <div class="hidden-sm hidden-xs visible-md visible-lg about">
-            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front ext goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text 
+            <%= render 'static_pages/blurb' %>
           </div>
         </div><!-- end second column -->
 
@@ -31,39 +31,23 @@
             <div class="carousel-inner" role="listbox">
               <div class="item active">
                 <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
-                <div class="carousel-caption">
-                  <h3>Chania</h3>
-                  <p>Caption 1</p>
-                </div>
               </div>
 
               <div class="item">
                 <%= image_tag("yosemite.png", class: "img-responsive main-img img-circle") %>
-                <div class="carousel-caption">
-                  <h3>Chania</h3>
-                  <p>Caption 2</p>
-                </div>
               </div>
 
               <div class="item">
                 <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
-                <div class="carousel-caption">
-                  <h3>Chania</h3>
-                  <p>Caption 1</p>
-                </div>
               </div>
 
               <div class="item">
                 <%= image_tag("yosemite.png", class: "img-responsive main-img img-circle") %>
-                <div class="carousel-caption">
-                  <h3>Chania</h3>
-                  <p>Caption 1</p>
-                </div>
               </div>
             </div>
           </div><!-- end carousel-->
           <div class="about visible-sm visible-xs hidden-md hidden-lg">
-            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front ext goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text 
+            <%= render 'static_pages/blurb' %>
           </div>
         </div>
       </div><!-- end row -->
