--- a/app/views/posts/_sidebar.html.erb
+++ b/app/views/posts/_sidebar.html.erb
@@ -7,22 +7,19 @@
     </div>
     <!-- Blog Categories Well -->
     <div class="well">
-        <h4>Categories</h4>
+        <h4>Categories   <small><%= link_to " (View All)", posts_path, class: "post-title" %></small></h4>
         <div class="row">
             <div class="col-lg-6">
             <% @tags.find_each do |tag| %>
                 <ul class="list-unstyled">
-
-                    <% if tag.id.even? %>
-                        <li><%= link_to tag.name, {controller:"posts", action:"index", tag: tag.id } %></li>
-                    
+                <% if tag.id.even? %>
+                    <li><%= link_to tag.name, {controller:"posts", action:"index", tag: tag.id }, class: "post-title" %></li>
                 </ul>
             </div>
             <div class="col-lg-6">
             <% else %>
                 <ul class="list-unstyled">
-                
-                    <li><%= link_to tag.name, {controller:"posts", action:"index", tag: tag.id } %></li>
+                    <li><%= link_to tag.name, {controller:"posts", action:"index", tag: tag.id }, class: "post-title" %></li>
                     <% end %>
                 </ul>
                 <% end %>
