--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,7 +5,7 @@
   <span class="glyphicon glyphicon-time"></span> 
   Posted on <%= post.created_at.strftime("%b %d, %Y") %>
 </p>
-<p class="postbody"><%= post.content %></p>
+<div class="postbody"><%= raw(post.content) %></div><br/>
 <button type="button" class="btn btn-primary">
   <%= link_to "Read More ", post_path(post), class: "button-text-color" %><span class="glyphicon glyphicon-chevron-right"></span>
 </button>
