--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,10 +22,10 @@
                     <h4>Leave a Comment:</h4>
                         <%= form_for [@post, @post.comments.new] do |f| %>
                         <div class="field">
-                            <%= f.text_field :author %>
+                            <%= f.text_field :author, class: "form-control", placeholder: "Name" %>
                         </div><br/>
                         <div class="field">
-                            <%= f.text_area :content, class: "form-control" %><br/>
+                            <%= f.text_area :content, class: "form-control", placeholder: "Your comment here..." %><br/>
                         </div>
                         <%= f.submit "Submit", class: "btn btn-primary" %>
                     <% end %>
