updated pics and installed figaro

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -30,7 +30,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+                <%= image_tag("lake.png", class: "img-responsive main-img img-circle") %>
               </div>
 
               <div class="item">
@@ -38,11 +38,11 @@
               </div>
 
               <div class="item">
-                <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+                <%= image_tag("ridge.png", class: "img-responsive main-img img-circle") %>
               </div>
 
               <div class="item">
-                <%= image_tag("yosemite.png", class: "img-responsive main-img img-circle") %>
+                <%= image_tag("halfdome.png", class: "img-responsive main-img img-circle") %>
               </div>
             </div>
           </div><!-- end carousel-->
