--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, "Blog") %>
 
+<% if logged_in? %>
+  <%= (link_to "Create a new post", new_post_path) %>
+<% end %>
+
 <div class="row">
     <!-- Blog Entries Column -->
     <div class="col-md-7 col-md-offset-1">
