rolled back to get rid of ckeditor and paperclip; added edit/update post form and edit links again

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,6 +13,9 @@
 
                 <!-- Post Content -->
                 <p><%= raw(@post.content) %></p>
+                <% if logged_in? %>
+                    <%= link_to "Edit", edit_post_path(@post) %>
+                <% end %>
                 <hr>
 
                 <!-- Blog Comments -->
