--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,11 +6,11 @@
               <div class="col-xs-2 col-sm-2 col-md-1">
                 <span class="glyphicon glyphicon-earphone footerglyph"></span>
               </div>
-              <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Call</b><br/>T: 207-504-6930</div>
+              <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Call</b><br/>T: <%= phone_number_link("(207) 504-6930") %></div>
               <div class="col-xs-2 col-sm-2 col-md-1">
                 <span class="glyphicon glyphicon-envelope footerglyph"></span>
               </div>
-              <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Contact</b><br/>lcfinnegan@gmail.com</div>
+              <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Contact</b><br/><%= mail_to "lcfinnegan@gmail.com" %></div>
               <div class="col-xs-2 col-sm-2 col-md-1">
                 <span class="glyphicon glyphicon-plus footerglyph"></span>
               </div>
