--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for @post do |f| %>
 
 <%= f.label :title %>
-<%= f.text_field :title %>
+<%= f.text_field :title, class: "form-control" %><br/>
 
 <%= f.label :content %>
-<%= f.text_field :content %>
+<%= f.text_area :content, class: "form-control", rows: 10 %><br/>
 
 <%= f.submit %>
 <% end %>
