--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,9 +15,10 @@
                 <p><%= markdown(@post.content) %></p>
                 <% if logged_in? %>
                     <%= link_to "Edit", edit_post_path(@post) %>
+                    <%= link_to "Delete", @post, method: :delete, data: { confirm: "Are you sure?" } %>
                 <% end %>
                 <hr>
-                <p><b>Tags: </b><% @post.tags.each do |tag| %>
+                <p><b>Tags:&nbsp;&nbsp;</b><% @post.tags.each do |tag| %>
                     <%= link_to tag.name, {controller:"posts", action:"index", tag: tag.id }, class: "post-title" %>&nbsp;&nbsp;
                     <% end %> 
                 </p>
@@ -52,6 +53,9 @@
                         <%= markdown(comment.content) %>
                     </div>
                 </div>
+                <% if logged_in? %>
+                  <%= link_to "Delete", [@post, comment], method: :delete, data: { confirm: "Are you sure?" } %>
+                  <% end %>
                 <% end %>
 
                 <!-- Comment -->
