--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for @post do |f| %>
 
-<%= f.label :title %>
-<%= f.text_field :title, class: "form-control" %><br/>
+<p><%= f.label :title %></p>
+<p><%= f.text_field :title, class: "form-control" %></p>
 
-<%= f.label :content %>
-<%= f.text_area :content, class: "form-control", rows: 10 %><br/>
+<p><%= f.label :content %></p>
+<p><%= f.text_area :content, class: "form-control", rows: 10 %></p>
 
-<%= f.submit %>
+<p><%= f.submit %></p>
 <% end %>
