--- a/app/views/static_pages/_blurb.html.erb
+++ b/app/views/static_pages/_blurb.html.erb
@@ -1,1 +1,1 @@
-This site is still under construction, but feel free to look around.  
+<p>This site is still under construction, but feel free to look around.</p>
