updated pics and blurbs

--- a/app/views/static_pages/_blurb.html.erb
+++ b/app/views/static_pages/_blurb.html.erb
@@ -1,1 +1,1 @@
-<p>This site is still under construction, but feel free to look around.</p>
+<p>I created this site to centralize my projects and personal interests, and to keep a record of useful resources.  There isn't much here yet, but feel free to look around!</p>
