--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,15 @@
 <% provide(:title, "About") %>
 
-<p>Thanks for checking out my site!</p>
+<div class="row">
+    <div class="col-md-4 col-md-offset-1">
+        <%= image_tag("halfdome2", class: "img-responsive main-img img-circle") %>
+    </div>
+    <div class="col-md-6">
+        <h3>Thanks for visiting!</h3>
+        <p>I built this site to create a simple rails app and improve my CSS.  Filling in this text is proving to be more difficult than the coding itself, but I'll give it a shot!  I was born in California, grew up in England, went to college in Maine (Bowdoin College) and now live in Chicago.  I'm an adrenaline junkie who's passionate about hiking/being outdoors, trying new foods, investing/personal finance, and space exploration.  I also consume more chocolate than anyone you've ever met.</p>
+        <p>As a Business Analyst at Morningstar, I'm actively involved in all stages of the product lifecycle - researching requirements, writing functional specs, collaborating with developers, testing new features, regression testing releases, and supporting clients.  The only missing piece has been the actual coding, so I've been learning Ruby, Rails, Javascript, Python, HTML and CSS in my spare time.  I love problem solving and taking on new challenges, and teaching myself from scratch has been a tremendously rewarding and humbling experience.</p>
+    </div>
+</div>
+<!-- /.row -->
+
+<hr>
