--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -3,9 +3,7 @@
 <!-- Project One -->
 <div class="row">
     <div class="col-md-4 col-md-offset-1">
-        <a href="#">
-            <img class="img-responsive project" src="http://placehold.it/700x300" alt="">
-        </a>
+        <%= image_tag("site", class: "img-responsive") %>
     </div>
     <div class="col-md-6">
         <h3>Personal Website</h3>
