fixed the footer in mobile view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -269,9 +269,18 @@ body {
   }
 
   .footer {
-    padding: 0 !important;
-    margin: 0 !important;
+    padding-bottom: 0 !important;
+    margin-bottom: 0 !important;
+    padding-top: 2%;
     height: 190px;
+  }
+
+  .icon, .text {
+  padding: 1%;
+  }
+
+  .icon {
+    text-align: center;
   }
 
   .navbar-nav li {
