--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,15 +3,15 @@
         <div class="row footer-main">
           <div class="col-md-10 col-md-offset-1">
             <div class="row">
-              <div class="col-xs-2 col-sm-2 col-md-1">
+              <div class="col-xs-2 col-sm-2 col-md-1 icon">
                 <span class="glyphicon glyphicon-earphone footerglyph"></span>
               </div>
               <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Call</b><br/>T: <%= phone_number_link("(207) 504-6930") %></div>
-              <div class="col-xs-2 col-sm-2 col-md-1">
+              <div class="col-xs-2 col-sm-2 col-md-1 icon">
                 <span class="glyphicon glyphicon-envelope footerglyph"></span>
               </div>
               <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Contact</b><br/><%= mail_to "lcfinnegan@gmail.com" %></div>
-              <div class="col-xs-2 col-sm-2 col-md-1">
+              <div class="col-xs-2 col-sm-2 col-md-1 icon">
                 <span class="glyphicon glyphicon-plus footerglyph"></span>
               </div>
               <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Social Media</b><br/>
@@ -20,7 +20,7 @@
                 <%= link_to image_tag("Facebook.png", class: "img-responsive social-img"), "https://www.facebook.com/larafinnegan", target: "_blank" %>
                 <%= link_to image_tag("Googleplus.png", class: "img-responsive social-img"), "https://plus.google.com/u/0/+LaraFinnegan/posts", target: "_blank" %>
               </div>
-              <div class="col-xs-2 col-sm-2 col-md-1">
+              <div class="col-xs-2 col-sm-2 col-md-1 icon">
                 <span class="glyphicon glyphicon-copyright-mark footerglyph"></span>
               </div>
               <div class="col-xs-10 col-sm-10 col-md-2 text">© 2015 by Lara Finnegan</div>
