added some tests and a little refactoring

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,6 @@
 <% provide(:title, "Blog") %>
 
-<% if logged_in? %>
-  <%= (link_to "Create a new post", new_post_path) %>
-<% end %>
+<%= link_to "Create a new post", new_post_path if logged_in? %>
 
 <div class="row">
     <!-- Blog Entries Column -->
