--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <%= link_to "Business Analyst | Web Developer", root_path, class: "navbar-brand" %>
+                <%= link_to "Business Analyst | Web Developer", root_path, "data-no-turbolink" => true, class: "navbar-brand" %>
               </div> <!-- end div class="navbar-header" -->
 
               <div class="collapse navbar-collapse">
