--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -8,7 +8,9 @@
     <div class="col-md-6">
         <h3>Personal Website</h3>
         <p>This website was my first attempt at a completed rails application, containing a blog, tags and comments functionality.  I used Bootstrap for a lot of the styling, but particularly for the home page (and to practice my CSS-fu), I tried to move away from the standard 'Bootstrap' look and create something different.</p>
-        <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        <button class="btn btn-primary">
+          <%= link_to "View Project ", root_path, "data-no-turbolink" => true, class: "button-text-color" %><span class="glyphicon glyphicon-chevron-right"></span>
+        </button>
         <a class="btn btn-primary" href="https://github.com/larafinnegan/site" target="_blank">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
     </div>
 </div>
