--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -18,3 +18,32 @@
 
 <hr>
 
+<!-- Project 2 -->
+<div class="row">
+    <div class="col-md-4 col-md-offset-1">
+    </div>
+    <div class="col-md-6">
+        <h3>Calculator in Javascript</h3>
+        <p>I created a simple browser-based calculator in Javascript to remind myself of the syntax and learn how to write Jasmine specs.</p>
+        <a class="btn btn-primary" href="http://htmlpreview.github.io/?https://github.com/larafinnegan/javascript/blob/master/jasmine/src/index.html" target="_blank">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        <a class="btn btn-primary" href="https://github.com/larafinnegan/javascript" target="_blank">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+</div>
+<!-- /.row -->
+
+<hr>
+
+<!-- Project 3 -->
+<div class="row">
+    <div class="col-md-4 col-md-offset-1">
+    </div>
+    <div class="col-md-6">
+        <h3>Etch-A-Sketch</h3>
+        <p>Basic browser-based Etch-A-Sketch in Javascript to learn about traversing/manipulating the DOM dynamically with JQuery.</p>
+        <a class="btn btn-primary" href="http://htmlpreview.github.io/?https://github.com/larafinnegan/Etch-A-Sketch/master/etchsketch.html" target="_blank">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        <a class="btn btn-primary" href="https://github.com/larafinnegan/Etch-A-Sketch" target="_blank">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+</div>
+<!-- /.row -->
+
+<hr>
