added styling and a few pics

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,11 @@ body {
   text-decoration: none;
 }
 
+.btn-xs {
+  background-color: white;
+  border: none;
+}
+
 .button-text-color:hover {
   color: white;
   text-decoration: none;
