--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
     <!-- Blog Entries Column -->
-    <div class="col-md-7 col-md-offset-1">
+    <div class="col-md-7 col-md-offset-1 post-preview">
         <%= render @posts %>
 
         <%= will_paginate %>
