--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -21,6 +21,23 @@
 <!-- Project 2 -->
 <div class="row">
     <div class="col-md-4 col-md-offset-1">
+    <%= image_tag("snake", class: "img-responsive") %>
+    </div>
+    <div class="col-md-6">
+        <h3>Snake in Javascript</h3>
+        <p>Browser-based replica of the classic Snake game to practice object-oriented Javascript and intervals/keyboard inputs.</p>
+        <a class="btn btn-primary" href="http://htmlpreview.github.io/?https://github.com/larafinnegan/snake/blob/master/jasmine/src/index.html" target="_blank">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        <a class="btn btn-primary" href="https://github.com/larafinnegan/snake" target="_blank">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+</div>
+<!-- /.row -->
+
+<hr>
+
+<!-- Project 3 -->
+<div class="row">
+    <div class="col-md-4 col-md-offset-1">
+    <%= image_tag("calculator", class: "img-responsive") %>
     </div>
     <div class="col-md-6">
         <h3>Calculator in Javascript</h3>
@@ -33,9 +50,10 @@
 
 <hr>
 
-<!-- Project 3 -->
+<!-- Project 4 -->
 <div class="row">
     <div class="col-md-4 col-md-offset-1">
+    <%= image_tag("etchsketch", class: "img-responsive") %>
     </div>
     <div class="col-md-6">
         <h3>Etch-A-Sketch</h3>
